# nexmind

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml  project_rules.md  start.bat  start.sh
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  test_fixed.py  test_search.py
backend/app/: __init__.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  agent.py  config.py
backend/app/tools/: __init__.py  analysis.py  report.py  search.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
