[project]
name = "nexmind-backend"
version = "0.1.0"
description = "NexMind AI-Powered Enterprise Analysis Platform Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langgraph>=0.2.0",
    "langsmith>=0.0.70",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "typing-extensions>=4.8.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "duckduckgo-search>=3.9.0",
]
